--- a/.gitignore
+++ b/.gitignore
@@ -104,12 +104,12 @@ ipython_config.py
 # pdm
 #   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
 #pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
+#   pdm stores project_dict-wide configurations in .pdm.toml, but it is recommended to not include it
 #   in version control.
 #   https://pdm.fming.dev/#use-with-ide
 .pdm.toml
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project_dict/pdm
 __pypackages__/
 
 # Celery stuff
@@ -129,11 +129,11 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
+# Spyder project_dict settings
 .spyderproject
 .spyproject
 
-# Rope project settings
+# Rope project_dict settings
 .ropeproject
 
 # mkdocs documentation
